<resources>
    <string name="app_name">Bluetooth Development Debug Tool</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="notSupported_Bluetooth">Bluetooth is not supported on this device.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonExit">Exit</string>
    <string name="buttonHelp">Help</string>
    <string name="buttonTerminal">Terminal</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="buttonConnectDevice">Connect to Device</string>
    <string name="textviewTitle">Bluetooth Development Debug Tool</string>
    <string name="textviewConnected">Connected:</string>
    <string name="textviewDeviceName">Device:</string>
    <string name="textviewDeviceNameDisplay">Devicename</string>
    <string name="textviewConnectHead">Pick a device to connect</string>
    <string name="buttonScan">Scan for Device</string>
    <string name="buttonBack">Back</string>
    <string name="buttonSaveOutput">Save Output</string>
    <string name="CmdInputText">Input command</string>
    <string name="buttonSave">Save</string>
    <string name="saveOutputTextViewSaveScr">Enter filename:</string>
    <string name="editTextFilename">filename here</string>
    <string name="extension">.log</string>
    <string name="textViewChooseSaveLocation">Choose save location:</string>
    <string name="deviceListElementTextViewMac_address">MAC Address:</string>
    <string name="deviceListElementTextViewDeviceName">Device Name:</string>
    <string name="deviceListElementTextViewSignalStrength">Signal Strength:</string>
    <string name="deviceListElementTextViewIsBonded">Not Bonded</string>
    <string name="deviceListElementTextViewSignalDelay">Signal Delay:</string>
    <string name="deviesIsConneted">Conneted</string>
    <string name="deviesIsNotConneted">Not Conneted</string>
    <string name="min_sdk_req">MIN. SDK level: 18 (To support BLE)</string>
    <string name="seekButton">SEARCH</string>
    <string name="Load">Load</string>
    <string name="logName">Log name:</string>
    <string name="logTimestamp">Created at:</string>
    <!-- Toast call-->
    <string name="deviceConneted">There is a device connted, navigating to the Terminal view</string>
    <string name="noDeviceConneted">There is not a device connted, navigating to the Connetion view</string>
    <string name="dataSaveOnDatabase"> Data is saved on the Database</string>
    <string name="willNotSave">You have chosen not to save</string>
    <string name="willSave">You have chosen to save</string>

    <!-- Textboxes call-->
    <!-- pop up view-->
    <string name="notSavedDataFromTer"> You are about to return to the main window without saving. Are you sure you want this? Check OK to confirm you do not want to save the data The data will not be saved </string>
    <string name="helpingText">When you return from this screen with the \"back\"-button, you\'ll get back to the main screen. From there, you can connect to a device by clicking \"Connect to device\". On this new screen, you\'ll be able to click \"Scan for Device\", which will create a list of available BLE devices nearby. Click one of these devices to connect to it, and be take onwards to the terminal screen. Here, you\'ll recieve live data from the connected device. You can save the contents of the terminal to a database by clicking the \"Save output button\". This will take you to a new screen, where you are able to choose the name for your log file. This name is for you to find it at a later time, through the \"Load\"-button on the main screen.</string>
    <!-- Help view-->
    <!--  <string name="HelpTxt">Help</string>-->

    <!-- Button call-->


</resources>
