<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    android:background="@drawable/border"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/deviceListElementTextViewMacAddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/deviceListElementTextViewMac_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deviceListElementTextViewDeviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deviceListElementTextViewDeviceName"
            app:layout_constraintStart_toStartOf="@+id/deviceListElementTextViewMacAddr"
            app:layout_constraintTop_toBottomOf="@+id/deviceListElementTextViewMacAddr" />

        <TextView
            android:id="@+id/deviceListElementTextViewSignalStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deviceListElementTextViewSignalStrength"
            app:layout_constraintStart_toStartOf="@+id/deviceListElementTextViewMacAddr"
            app:layout_constraintTop_toBottomOf="@+id/deviceListElementTextViewDeviceName" />

        <TextView
            android:id="@+id/deviceListElementTextViewBonded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/deviceListElementTextViewIsBonded"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/deviceListElementTextViewMacAddr"
            app:layout_constraintTop_toBottomOf="@+id/deviceListElementTextViewSignalStr" />

        <TextView
            android:id="@+id/deviceListElementTextViewSignalDelay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:text="@string/deviceListElementTextViewSignalDelay"
            app:layout_constraintBottom_toBottomOf="@+id/deviceListElementTextViewSignalStr"
            app:layout_constraintStart_toEndOf="@+id/deviceListElementTextViewSignalStr" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>